Fix spacing on smaller viewport for footer

--- a/css/bayareaacro.css
+++ b/css/bayareaacro.css
@@ -23,7 +23,7 @@
 }*/
 @media (max-width: 50rem){
     .content{
-        width:100%;
+        width:80%;
         padding:0 1rem;
     }
 }
